[gd_scene load_steps=5 format=3 uid="uid://ct3dpsy4rsd6j"]

[ext_resource type="Script" uid="uid://snm7s1bioedx" path="res://Common/MouseClickWidgets/Scripts/_clickable.gd" id="1_fjxch"]
[ext_resource type="Script" uid="uid://ec1d8h0v3rka" path="res://Common/MouseClickWidgets/Components/mouse_click_component.gd" id="2_h18fc"]
[ext_resource type="Texture2D" uid="uid://m3nlr4mo5igk" path="res://icon.svg" id="3_kw81k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vauvt"]
size = Vector2(128, 128)

[node name="ClickableItem" type="Area2D"]
script = ExtResource("1_fjxch")

[node name="MouseClickComponent" type="Node" parent="."]
script = ExtResource("2_h18fc")
metadata/_custom_type_script = "uid://ec1d8h0v3rka"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vauvt")

[node name="TextureRect" type="Sprite2D" parent="."]
texture = ExtResource("3_kw81k")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="clicked" from="MouseClickComponent" to="." method="_on_item_clicked"]
